# dealii-adapter

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  coupled_elasto_dynamics.cc  dealii-precice.cc  dealiiadapter.cc  elasticity.cc  parameters.prm
.github/workflows/: building.yml  indent.yml
adapter/: adapter.h  coupling_functions.h  dof_tools_extension.h  helper.h  time.h
coupled_elasto_dynamics/: coupled_elasto_dynamics.cc
coupled_elasto_dynamics/include/: parameter_handling.h
include/adapter/: adapter.h  parameters.cc  parameters.h  time_handler.h
linear_elasticity/: CMakeLists.txt  linear_elasticity.cc  linear_elasticity.prm  parameters.prm
linear_elasticity/include/: parameter_handling.h  postprocessor.h
nonlinear_elasticity/: CMakeLists.txt  nonlinear_elasticity.cc  nonlinear_elasticity.prm  parameters.prm
nonlinear_elasticity/include/: compressible_neo_hook_material.h  parameter_handling.h  postprocessor.h
nonlinear_solid_mechanics/: CMakeLists.txt  nonlinear_solid_mechanics.cc  parameters.prm
nonlinear_solid_mechanics/include/: compressible_neo_hook_material.h  coupling_functions.h  parameter_handling.h  postprocessor.h  time.h
source/: CMakeLists.txt
source/heat_equation/: CMakeLists.txt  heat_equation.cc
source/linear_elasticity/: CMakeLists.txt  linear_elasticity.cc
source/linear_elasticity/include/: linear_elasticity.h  parameter_handling.h  postprocessor.h
source/nonlinear_elasticity/: CMakeLists.txt  nonlinear_elasticity.cc
source/nonlinear_elasticity/include/: compressible_neo_hook_material.h  nonlinear_elasticity.h  parameter_handling.h  postprocessor.h
